2017-02-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py:
	
	(express_uncertainty): Add permissive mode where a single failed
	derivative does not cause the entire expression to fail (awaiting a
	fix for the failures).

	(recursive_args): Bugfix, was dropping indexed values completely
	rather than merely not descending into their index and indexbase.


2017-02-16  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/em.py(SRF):

	- Added method for estimating band coefficients for approximative
	conversions.  Not implemented yet, just put the documentation there.

	* typhon/physics/metrology.py(recursive_args):

	- Don't (by default) consider the integrand as an argument, at least
	not until I know how to propagate those through; will not happen for β
	FCDR.

2017-02-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py (load_indexed):

	Fixed documentation format.

2017-02-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py (load_indexed):

	Fixed handling of zero-padding in filenames.

2017-02-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	Fixed class method `to_atmlab_dict` to use the new `dataname` attribute.

2017-02-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	(load):

	If the given file is not found, try to add the '.gz' extension.  This is
	consistent with ARTS.

	(load_indexed):

	Added a convenience function to load indexed XML files. All files matching
	a given filename pattern are loaded and the results are retunred in a list.

	* typhon/arts/griddedfield.py:

	Added attribute `dataname` to all GriddedField classes. It is now possible
	to set a proper name for the stored data array.

	If `dataname` is not set, no name is written to XML files. This replaces
	the old behavior of adding 'Data' as default.

2017-02-10  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData):
